# jonex

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  capability_runtime.example.yaml  frontend-development-standard.md  jonex-platform-architecture.md  jonex.ps1  launch.json.example  local-fullstack-debugging-guide.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run_gateway.py  run_llm_gateway.py  run_sidecar.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
Reference/LightRAG/: MANIFEST.in  PROJECT_STRUCTURE.md  README-zh.md  README.md  env.example  lightrag.service.example  pyproject.toml
Reference/LightRAG/lightrag/: jonex_metering.py  lightrag.py  operate.py  utils.py
Reference/LightRAG/scripts/: build_server_wheel.py
Reference/LightRAG/tests/: test_priority_limiter_context.py
Reference/Rag-anything/: .gitignore  README.md  README_zh.md  atomic-rag-server.py  env.example  pyproject.toml  requirements.txt  setup.py  testmps.py  扩展功能说明文档.md
Reference/Rag-anything/examples/: audio_processing_example.py  insert_content_list_example.py  modalprocessors_example.py  raganything_bypass_parser_example.py  raganything_example.py  video_processing_example.py
Reference/Rag-anything/raganything/: batch_parser.py  config.py  image_transport.py  modalprocessors.py  parser.py  processor.py  prompt.py  prompts_zh.py  query.py  raganything.py  utils.py  video_processor.py
Reference/Rag-anything/raganything/asr/: __init__.py
Reference/Rag-anything/raganything/asr/backends/: __init__.py  legacy.py  openai_compatible.py  whisper.py
Reference/Rag-anything/raganything/video_analysis/: __init__.py
Reference/Rag-anything/raganything/video_analysis/backends/: __init__.py  local.py  mps.py
Reference/Rag-anything/raganything/video_analysis/prompts/: mps_hotel_room_inspection.json  mps_scene_description.json  mps_video_understanding.json
Reference/Rag-anything/tests/: test_audio_processor.py  test_custom_parser.py  test_image_transport.py  test_insert_content_list.py  test_video_processor.py  test_video_vlm_integration.py
api_gateway/: __init__.py  deps.py  main.py
api_gateway/routes/: __init__.py  auth.py  business_domain.py  knowledge_base.py  platform.py  tcadp.py
capabilities/business_domain/: __init__.py  capability.py
capabilities/business_domain/api/: __init__.py  adapters.py  engines.py  prompt_templates.py  skills.py  templates.py
capabilities/business_domain/dtos/: __init__.py  prompt_template.py  skill.py  templates.py
capabilities/business_domain/models/: __init__.py  adapter.py  engine.py  enums.py  prompt_template.py  skill.py  template.py
capabilities/business_domain/repository/: __init__.py  prompt_template_repository.py  skill_repository.py
capabilities/business_domain/services/: __init__.py  adapter_service.py  engine_service.py  prompt_template_service.py  skill_service.py  template_publish_service.py  template_service.py
capabilities/knowledge_base/: __init__.py  capability.py  dao.py  models.py  ontology_graph_dao.py  service.py
capabilities/knowledge_base/api/: __init__.py  folders.py  services.py  spaces.py
capabilities/knowledge_base/dtos/: __init__.py  data_source.py  document.py  folder.py  ontology_query.py  ontology_schema.py  parse_result.py  (+6 more)
capabilities/platform/: __init__.py  capability.py
deploy/: .env.example  .env.rag.example  DEPLOYMENT_ARCHITECTURE.md  README.md  docker-compose.debug.yml  docker-compose.gpu.yml  docker-compose.infra.yml  docker-compose.mac.yml  docker-compose.override.yml  docker-compose.yml  start_capability.py
deploy/config/: capability_runtime.yaml
deploy/docker/: atomic-rag-requirements.txt  atomic-rag.Dockerfile  capability.Dockerfile  download_models.py  frontend-entrypoint.sh  frontend-gateway.Dockerfile  gateway.Dockerfile  lightrag-source.Dockerfile  llm-gateway.Dockerfile  python-base.Dockerfile  sidecar.Dockerfile
deploy/nginx/: frontend-gateway.conf  shell.conf
deploy/postgres/: init.sql
deploy/redis/: redis.conf
deploy/scripts/: build_all.cmd  build_all.sh  build_benchmark.py  trigger_kb_ontology_reextract.sql
docs/dev/: backend-development-standard.md  local-frontend-dev-guide.md
docs/env/: .env.local.example  .env.rag.local.example  .env.server-local.example
frontends/: .env.local.example  .npmrc  MANIFEST.md  i18n-status.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontends/_template/: .env.example  CLAUDE.md  Dockerfile  README.md  index.html  package.json  tsconfig.json  vite.config.ts
frontends/core-business/: .env.example  .env.local.example  Dockerfile  index.html  package.json  playwright.config.ts  vite.config.ts
frontends/dev-gateway/: .env.example  README.md  index.js  package.json
frontends/ecosystem-management/: .env.example  CLAUDE.md  Dockerfile  index.html  package.json  vite.config.ts
frontends/platform-management/: .env.example  Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
frontends/scripts/: check-i18n.mjs
frontends/shell/: .env.example  Dockerfile  index.html  package.json  tsconfig.json  vite.config.js
jonex_core/capability/: __init__.py  base.py  locator.py  models.py  registry.py
jonex_core/common/: __init__.py  audit.py  cache.py  config.py  crypto.py  database.py  entity.py  exception_handler.py  exceptions.py  file_source_util.py  logger.py  neo4j_client.py  ontology_embedding.py  ontology_llm.py  repository.py  rerank.py  response.py  tenant.py  timing.py  vector.py
jonex_core/discovery/: __init__.py  heartbeat.py  registry.py
jonex_core/llm_gateway/: app.py  auth.py  context.py  metering.py  recorder.py  rerank_profiles.py  router.py  upstream.py
jonex_core/models/: __init__.py  login_ticket.py  user.py
jonex_core/security/: __init__.py  internal_auth.py  user_auth.py
jonex_core/sidecar/: __init__.py  hooks.py  main.py  proxy.py
scripts/: bench_embedding.py  bench_llm_extract.py
(+390 files in other folders)
