[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jonex-platform"
version = "0.1.0"
description = "Jonex平台 - 插件化AI能力平台框架"
requires-python = ">=3.12.13"
dependencies = [
    "fastapi>=0.109.0,<0.110.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pydantic[dotenv]>=1.10.0,<2.0.0",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]
